--- a/data/css/novice.css
+++ b/data/css/novice.css
@@ -9,6 +9,7 @@
   background-color: transparent;
   z-index: 1;
   border-color: #000000;
+  padding-top: 24px;
   border-width: 0px;
   margin-left: auto;
 }
@@ -93,7 +94,6 @@
   font-weight: bold;
   min-height: 17px;
   font-size: 12px;
-  margin-top: 11px;
   line-height: 14px;
   background-color: transparent;
 }
