--- a/data/css/program-selector.css
+++ b/data/css/program-selector.css
@@ -3,10 +3,14 @@
   background-color: #82DAD1;
 }
 
-table, th, td {
-  border: 1px solid black;
-  font-size: 18px;
+table {
+  font-size: 20px;
   text-align: left;
+}
+
+th, td {
+  border: 2px solid black;
+  padding-left: 5px;
 }
 
 #page {
@@ -80,7 +84,7 @@ table, th, td {
   z-index: 10;
   border-style: solid;
   width: 281px;
-  margin-top: 35px;
+  margin-top: 10px;
   line-height: 29px;
 }
 
@@ -98,7 +102,7 @@ table, th, td {
   z-index: 14;
   border-style: solid;
   width: 281px;
-  margin-top: 35px;
+  margin-top: 10px;
   line-height: 29px;
 }
 
@@ -173,11 +177,11 @@ print {
   #u999-4 {
     width: 281px;
     margin-left: 2px;
-    margin-top: 20px;
+    margin-top: 10px;
   }
   #u311-4 {
     left: -1px;
-    margin-top: 37px;
+    margin-top: 10px;
   }
   #u840-4,
   #u864-4 {
@@ -185,11 +189,11 @@ print {
   }
   #u888-4 {
     left: -1px;
-    margin-top: 35px;
+    margin-top: 10px;
   }
   #u987-4 {
     left: -1px;
-    margin-top: 36px;
+    margin-top: 10px;
   }
   .css_verticalspacer .verticalspacer {
     height: calc(100vh - 678px);
