--- a/data/css/mode.css
+++ b/data/css/mode.css
@@ -1,23 +1,3 @@
-.version.novice {
-  color: #000015;
-  background-color: #51FA6B;
-}
-
-.version.expert {
-  color: #000017;
-  background-color: #C2782F;
-}
-
-.version.advanced {
-  color: #00000C;
-  background-color: #BA02E8;
-}
-
-.version.master {
-  color: #000001;
-  background-color: #9EAF48;
-}
-
 #page {
   background-image: none;
   margin-right: auto;
@@ -27,6 +7,95 @@
   padding-top: 24px;
   border-width: 0px;
   margin-left: auto;
+}
+
+.html {
+  background-color: #FFFFFF;
+}
+
+body#novice {
+  background-color: #39B54A;
+  position: relative;
+}
+
+body#expert {
+  background-color: #F15A24;
+  position: relative;
+}
+
+body#advanced {
+  background-color: #FACA30;
+  position: relative;
+}
+
+body#master {
+  background-color: #FF0000;
+  position: relative;
+}
+
+body {
+  position: relative;
+}
+
+.value_heading {
+  margin-left: 2px;
+  margin-top: 10px;
+  color: #FFFFFF;
+  width: 281px;
+  min-height: 17px;
+  position: relative;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 14px;
+  background-color: transparent;
+  z-index: 44;
+}
+
+.value_row {
+  width: 0.01px;
+  z-index: 2;
+  margin-left: 2px;
+  margin-top: 8px;
+}
+
+.value_name
+{
+  color: #FFFFFF;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 57px;
+  font-size: 24px;
+  margin-right: -10000px;
+  line-height: 29px;
+  background-color: #000000;
+  z-index: 2;
+  border-color: #000000;
+  width: 141px;
+}
+
+.value_name > p {
+  padding-top: 14px;
+}
+
+.value_input {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: normal;
+  min-height: 57px;
+  font-size: 22px;
+  margin-right: -10000px;
+  line-height: 26px;
+  background-color: #FFFFFF;
+  z-index: 6;
+  border-color: #000000;
+  width: 141px;
+  left: 141px;
+}
+
+.value_input > p {
+  padding-top: 14px;
 }
 
 #u1231 {
@@ -266,33 +335,7 @@
   padding-top: 14px;
 }
 
-.html {
-  background-color: #FFFFFF;
-}
 
-body#novice {
-  background-color: #39B54A;
-  position: relative;
-}
-
-body#expert {
-  background-color: #F15A24;
-  position: relative;
-}
-
-body#advanced {
-  background-color: #FACA30;
-  position: relative;
-}
-
-body#master {
-  background-color: #FF0000;
-  position: relative;
-}
-
-body {
-  position: relative; 
-}
 
 @media (min-width: 100px),
 print {
