--- a/data/css/mode.css
+++ b/data/css/mode.css
@@ -37,11 +37,22 @@ body {
   position: relative;
 }
 
+.width_full {
+  width: 280px;
+}
+
+.width_half {
+  width: 140px;
+}
+
+.offset_half {
+  left: 140px;
+}
+
 .value_heading {
   margin-left: 2px;
   margin-top: 10px;
   color: #FFFFFF;
-  width: 281px;
   min-height: 17px;
   position: relative;
   font-weight: bold;
@@ -52,7 +63,6 @@ body {
 }
 
 .value_row {
-  width: 0.01px;
   z-index: 2;
   margin-left: 2px;
   margin-top: 8px;
@@ -71,7 +81,6 @@ body {
   background-color: #000000;
   z-index: 2;
   border-color: #000000;
-  width: 141px;
 }
 
 .value_name > p {
@@ -90,12 +99,48 @@ body {
   background-color: #FFFFFF;
   z-index: 6;
   border-color: #000000;
-  width: 141px;
-  left: 141px;
+  /*width: 141px;
+  left: 141px;*/
 }
 
 .value_input > p {
   padding-top: 14px;
+}
+
+a.save_button {
+  display:inline-block;
+  padding:0.7em 1.7em;
+  margin:0 0.3em 0.3em 0;
+  border-radius:0.5em;
+  border-style:solid;
+  border-color:#000000;
+  border-width: 2px;
+  box-sizing: border-box;
+  text-decoration:none;
+  font-weight:bold;
+  font-size: 24px;
+  color:#000000;
+  background-color:#29ABE2;
+  box-shadow:inset 0 -0.6em 1em -0.35em rgba(0,0,0,0.17),inset 0 0.6em 2em -0.3em rgba(255,255,255,0.15),inset 0 0 0em 0.05em rgba(255,255,255,0.12);
+  text-align:center;
+  position:relative;
+  min-height: 57px;
+}
+
+a.save_button:active{
+  box-shadow:inset 0 0.6em 2em -0.3em rgba(0,0,0,0.15),inset 0 0 0em 0.05em rgba(255,255,255,0.12);
+}
+
+.mode_name {
+  color: #000000;
+  text-align: center;
+  position: relative;
+  font-weight: bold;
+  min-height: 35px;
+  font-size: 30px;
+  line-height: 36px;
+  background-color: transparent;
+  z-index: 38;
 }
 
 #u1231 {
@@ -109,17 +154,7 @@ body {
   z-index: 43;
 }
 
-#u1083-4 {
-  color: #000000;
-  text-align: center;
-  position: relative;
-  font-weight: bold;
-  min-height: 35px;
-  font-size: 30px;
-  line-height: 36px;
-  background-color: transparent;
-  z-index: 38;
-}
+
 
 #u1083-2 {
   padding-top: 8px;
@@ -334,6 +369,7 @@ body {
 #u1082-2 {
   padding-top: 14px;
 }
+
 
 
 
